align-items fixed

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -45,6 +45,7 @@ a, p, h1, h2, h3, h4, h5, h6{
   	display: -ms-flexbox;      /* TWEENER - IE 10 */
   	display: -webkit-flex;     /* NEW - Chrome */
 		display: flex;
+		-webkit-align-items: center; /* Safari 7.0+ */
 		align-items: center;
 }
 
@@ -93,6 +94,7 @@ p{
   	display: -ms-flexbox;      /* TWEENER - IE 10 */
   	display: -webkit-flex;     /* NEW - Chrome */
 		display: flex;
+		-webkit-align-items: center; /* Safari 7.0+ */
 		align-items: center;
 		justify-content: space-around;
 }
@@ -103,6 +105,7 @@ p{
   	display: -ms-flexbox;      /* TWEENER - IE 10 */
   	display: -webkit-flex;     /* NEW - Chrome */
 		display: flex;
+		-webkit-align-items: center; /* Safari 7.0+ */
 		align-items: center;
 		justify-content: space-around;
 }
